--- a/page3.html
+++ b/page3.html
@@ -10,7 +10,7 @@
 		<center>
 		<h1>Friends and Family</h1>
 		</center>
-		<h2>Pages</h2>
+		<h2>Page 3</h2>
 		<ul>
 			<li><a href="index.html">Home</li>
 			<li><a href="page2.html">Hobbies</a></li>
